tests/paczka1/small_fuzzy/90365710.err
Error in line 2: hSw A895 39,2
Error in line 6: nXw A492 7,8
